duicontrolpanel (0.12.16~unreleased) unstable; urgency=low

  * Fixes: NB#247927 - [TASK] clicking settings from events object view
    opens view with no toolbar
  * Fixes: NB#250358 - Info icon incorrect for flight mode
  * Fixes: NB#250359 - Info icon incorrect for reset settings header

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 03 May 2011 17:39:41 +0200

duicontrolpanel (0.12.15) unstable; urgency=low

  * Doc & Example about how to localize a Declarative applet
  * Fixes: closing controlpanel could result in starting userguide
  * Fixes: NB#248758 - Duicontrolpanel searches for declarative settings
    XML files from /usr/share/duicontrolpanel/uidescriptions but the
    documentation says /usr/lib/duicontrolpanel/uidescriptions

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 29 Apr 2011 11:12:05 +0200

duicontrolpanel (0.12.14) unstable; urgency=low

  * some layout fixes
  * Fixes: NB#247999 - Looks as if multiple taps on a applet opens the
    applet multiple times
  * Fixes: "Special" briefview can not request page close (for reset applet)
  * Fixes: NB#250458 - not possible to disable the slider after it got some
    value

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 26 Apr 2011 15:34:03 +0200

duicontrolpanel (0.12.13) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#247927 - clicking settings from events object view opens
    view with no toolbar
  * Fixes: NB#244666 - [TASK] Control panel shall implement splash
    screen

  [ Sandor Pinter ]
  * Fixes: NB#247954 - The device shows previously opened screen when
    Settings application is opened

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Wed, 20 Apr 2011 11:16:02 +0200

duicontrolpanel (0.12.12) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#246239 - Settings application re-opens slowly, if swiped
    to background few times in a row
  * Fixes: NB#243609 - ResetApplet: Missing info icon in header

  [ Robert Manner ]