@@ -6,7 +6,6 @@ Name-logical-id=qtn_sett_main_aboutmy
 Icon=icon-m-settings-description
 
 Aliases="About,About my device,About my NXX"
-Translation-catalogs=
 
 Order=100
 
