@@ -5,8 +5,6 @@ Name-logical-id=qtn_sett_main_accessories
 
 Icon=icon-m-settings-accessories
 
-Aliases=
-Translation-catalogs=
 
 Order=90
 
