@@ -3,9 +3,7 @@ Parent=Applications
 Name="Installations"
 Name-logical-id=qtn_pmgr_appname
 
-Icon=
 
-Aliases=
 Translation-catalogs=packagemanager
 
 AutoStartApplet=1
