@@ -5,8 +5,7 @@ Name-logical-id=qtn_sett_main_notifications
 
 Icon=icon-m-settings-notification
 
-Aliases=
-Translation-catalogs=
-
 Order=60
+
+HasSeparatorLine=0
 
