@@ -5,8 +5,6 @@ Name-logical-id=qtn_sett_main_security
 
 Icon=icon-m-common-passcode
 
-Aliases=
-Translation-catalogs=
 
 Order=70
 
