@@ -5,8 +5,6 @@ Name-logical-id=qtn_sett_main_sounds
 
 Icon=icon-m-settings-feedback
 
-Aliases=
-Translation-catalogs=
 
 AutoStartApplet=1
 
