@@ -5,8 +5,6 @@ Name-logical-id=qtn_sett_main_wallpaper
 
 Icon=icon-m-settings-wallpaper
 
-Aliases=
-Translation-catalogs=
 
 AutoStartApplet=1
 
